review front end start

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.19.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "react": "^16.13.0",
+    "react-antd-form": "^1.2.3",
     "react-dom": "^16.13.0",
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.1.2",
