--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-validation": "^3.0.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
     "styled-components": "^5.3.3",
     "validator": "^12.2.0"
   },
