--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,10 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "messagebird": "^3.7.2",
     "mongoose": "^5.9.1"
+  },
+  "devDependencies": {
+    "twilio": "^3.76.1"
   }
 }
