--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "messagebird": "^3.7.2",
+    "moment": "^2.29.3",
     "mongoose": "^5.9.1"
   },
   "devDependencies": {
