sends email on registration

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon server.js"
   },
   "keywords": [
     "node.js",
@@ -22,7 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "messagebird": "^3.7.2",
     "moment": "^2.29.3",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.1",
+    "nodemailer": "^6.7.3"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
