--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "messagebird": "^3.7.2",
     "moment": "^2.29.3",
     "mongoose": "^5.9.1",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3"
   },
   "devDependencies": {
