--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
     "antd": "^4.19.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "multer": "^1.4.4",
     "react": "^16.13.0",
     "react-antd-form": "^1.2.3",
     "react-dom": "^16.13.0",
+    "react-dropzone": "^12.0.5",
     "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-validation": "^3.0.7",
+    "save": "^2.5.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "styled-components": "^5.3.3",
