--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "moment": "^2.29.3",
     "mongoose": "^5.9.1",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.3"
+    "nodemailer": "^6.7.3",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
