--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
     "messagebird": "^3.7.2",
     "moment": "^2.29.3",
