--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.19.3",
+    "antd": "^4.20.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "multer": "^1.4.4",
@@ -15,14 +15,18 @@
     "react-dom": "^16.13.0",
     "react-dropzone": "^12.0.5",
     "react-elastic-carousel": "^0.11.5",
+    "react-player": "^2.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-validation": "^3.0.7",
+    "react-video-js-player": "^1.1.1",
+    "reactstrap": "^9.0.2",
     "save": "^2.5.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "styled-components": "^5.3.3",
-    "validator": "^12.2.0"
+    "validator": "^12.2.0",
+    "video-react": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
